# dcxml

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-release.yml  tests.yml
dcxml/: __init__.py  simpledc.py  version.py  xmlutils.py
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst
tests/: test_simpledc.py
