# SPDX-FileCopyrightText: 2016-2018 CERN.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "dcxml"
description = "Dublin Core XML generation from Python dictionaries."
readme = "README.rst"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "core",
  "dublin",
  "json",
  "xml",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "lxml>=4.1.1",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/dcxml"

[project.optional-dependencies]
docs = [
  "sphinx>=3",
]
tests = [
  "pytest-invenio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "dcxml/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/dcxml",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--isort --pydocstyle --pycodestyle --doctest-glob="*.rst" --doctest-modules --cov=dcxml --cov-report=term-missing'
testpaths = "tests dcxml"
live_server_scope = "module"
